# ros_controllers

effort_controllers/: CMakeLists.txt  effort_controllers_plugins.xml
effort_controllers/include/effort_controllers/: joint_group_position_controller.h  joint_group_velocity_controller.h
effort_controllers/src/: joint_group_position_controller.cpp  joint_group_velocity_controller.cpp
forward_command_controller/: CMakeLists.txt  package.xml
forward_command_controller/include/forward_command_controller/: forward_joint_group_command_controller.h
gripper_action_controller/include/gripper_action_controller/: gripper_action_controller.h  gripper_action_controller_impl.h
position_velocity_torque_gains_controllers/: CMakeLists.txt  mainpage.dox  package.xml  position_velocity_torque_gains_plugins.xml
position_velocity_torque_gains_controllers/include/position_velocity_torque_gains_controllers/: joint_effort_controller.h  joint_group_effort_controller.h  joint_group_position_controller.h  joint_position_controller.h  joint_position_controller_old.h  joint_velocity_controller.h
position_velocity_torque_gains_controllers/src/: joint_effort_controller.cpp  joint_group_effort_controller.cpp  joint_group_position_controller.cpp  joint_position_controller.cpp  joint_position_controller_old.cpp  joint_velocity_controller.cpp
ros_controllers/: package.xml
velocity_controllers/: CMakeLists.txt  velocity_controllers_plugins.xml
velocity_controllers/include/velocity_controllers/: joint_group_position_controller.h
velocity_controllers/src/: joint_group_position_controller.cpp  joint_group_velocity_controller.cpp
