<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>position_velocity_torque_gains_controllers</name>
  <version>0.0.1</version>
  <description>position_velocity_torque_gains_</description>

  <maintainer email="mathieu@robots.ox.ac.uk">Mathieu Geisert</maintainer>

  <license>BSD</license>

  <author>Mathieu Geisert</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <build_depend>angles</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <!--build_depend>forward_command_controller</build_depend-->
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>control_msgs</build_export_depend>
  <!--build_export_depend>forward_command_controller</build_export_depend-->
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!--test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>xacro</test_depend-->

  <export>
    <controller_interface plugin="${prefix}/position_velocity_torque_gains_plugins.xml"/>
  </export>
</package>
